Fix depricated methods